--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   },
-  "resolutions": {
-  "rollup": "npm:@rollup/wasm-node"
-}
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-musl": "4.9.5"
+  }
 }
